// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`select_reducer renders correctly 1`] = `
Object {
  "menu": undefined,
  "singleMenu": null,
}
`;

exports[`select_reducer returns the correct state 1`] = `
Object {
  "menu": Array [],
  "singleMenu": null,
}
`;
